--- a/index.html
+++ b/index.html
@@ -11,27 +11,21 @@
 </head>
 
 <body>
-    <header id="header">
+    <header>
         <div class="banner-container text-center top">
             <nav class="nav nav-section">
                 <ul>
-                    <li><a href="pages/blog.html">BLOG</a></li>
+                    <li><a href="pages/blog.html">DES </a></li>
                     <li><a href="http://www.mr-shangster.com">PORTFOLIO</a></li>
                 </ul>
             </nav>
             <h5 style="color: #50899F; letter-spacing: 7.5px;margin-top: 19.4px;margin-bottom: 0px;margin-right: 30px;">WELCOME TO MY</h5>
             <h1 style="color: #362A46;font-size: 45pt;letter-spacing: 10px;margin-top: 0px;">BLOG. </h1>
             <div id="sketch-holder"></div>
-            <div class="button">
-                <a href="#assignment" class="btn-banner"> CONTINUE</a>
-            </div>
         </div>
     </header>
-    <div id="assignment" class="container main-content">
-        <div class="button text-center" style="top: 5px;">
-            <a href="#header" class="btn-banner-go-top">GO BACK TOP</a>
-        </div>
-        <div class="row flex-row clear ">
+    <div class="container main-content">
+        <section class="row flex-row clear ">
             <div class="flex-column flex-element-5">
                 <div class="column-4 panel-title ">
                     <div class="content ">
@@ -42,11 +36,13 @@
                 </div>
                 <div class="column-4 panel">
                     <div class="content ">
-                        <ul>
-                            <li>
-                                Functions 1 | 2
-                            </li>
-                        </ul>
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="">Functions 1 | 2</a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -60,13 +56,15 @@
                 </div>
                 <div class="column-4 panel ">
                     <div class="content ">
-                        <ol>
-                            <li>Blah blah blah (blog)</li>
-                            <li>Mad Libs 2.0</li>
-                            <li>full of interface</li>
-                            <li>Time is on my side</li>
-                            <li>The library</li>
-                        </ol>
+                        <nav>
+                            <ol>
+                                <li><a href="">Blah blah blah (blog)</a></li>
+                                <li><a href="">Mad Libs 2.0</a></li>
+                                <li><a href="">full of interface</a></li>
+                                <li><a href="">Time is on my side</a></li>
+                                <li><a href="">The library</a></li>
+                            </ol>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -78,24 +76,26 @@
                         </h3>
                     </div>
                 </div>
-                <div class="column-4 panel ">
-                    <div class="content ">
-                        <ul>
-                            <li>Topic choice</li>
-                            <li>Background research</li>
-                            <li>ISEA proposal</li>
-                            <li>Comparative analysis</li>
-                            <li>Needfinding</li>
-                            <li>Brainstorm, visual research</li>
-                        </ul>
+                <div class="column-4 panel">
+                    <div class="content">
+                        <nav>
+                            <ul>
+                                <li><a href="">Topic choice</a></li>
+                                <li><a href="">Background research</a></li>
+                                <li><a href="">ISEA proposal</a></li>
+                                <li><a href="">Comparative analysis</a></li>
+                                <li><a href="">Needfinding</a></li>
+                                <li><a href="">Brainstorm, visual research</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
     <footer class="footer-section ">
         <div class="container text-center">
-            <a href="http://validator.w3.org/check?uri=referer">Valid HTML 5</a>|<a href="http://jigsaw.w3.org/css-validator/#validate_by_input">Valid CSS</a> |
+            <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>|<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> |
             <a href="mailto:qinlu@ucdavis.edu" target="_top">Send Email</a>
         </div>
     </footer>
