--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>PORTAL</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/blog1/css/style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js"></script>
     <!-- <script src="scriptdropdown.js"></script> -->
