--- a/studio1/index.html
+++ b/studio1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>PORTAL</title>
-    <link rel="stylesheet" href="studio1/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.21/p5.js"></script>
     <!-- <script src="scriptdropdown.js"></script> -->
@@ -99,7 +99,7 @@
             <a href="mailto:qinlu@ucdavis.edu" target="_top">Send Email</a>
         </div>
     </footer>
-    <script src="studio1/script/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
