--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                     <li><a href="http://www.mr-shangster.com">PORTFOLIO</a></li>
                 </ul>
             </nav>
-            <h5 style="color: #50899F; letter-spacing: 7.5px;margin-top: 19.4px;margin-bottom: 0px;margin-right: 30px;">WELCOME TO MY</h5>
-            <h1 style="color: #362A46;font-size: 45pt;letter-spacing: 10px;margin-top: 0px;">BLOG. </h1>
+            <div class="page-title">
+                <h4>WELCOME TO SHANG LU'S</h4>
+                <h1>DES 157</h1>
+            </div>
             <div id="sketch-holder"></div>
         </div>
     </header>
