1. changed blog line height 2. change blog margin left and right

--- a/studio1/index.html
+++ b/studio1/index.html
@@ -19,13 +19,13 @@
                     <li><a href="http://www.mr-shangster.com">PORTFOLIO</a></li>
                 </ul>
             </nav>
-            <h5 style="color: #50899F; letter-spacing: 7.5px;margin-top: 19.4px;margin-bottom: 0px;margin-right: 30px;">WELCOME TO MY</h5>
-            <h1 style="color: #362A46;font-size: 45pt;letter-spacing: 10px;margin-top: 0px;">BLOG. </h1>
+            <h5>WELCOME TO MY</h5>
+            <h1>BLOG. </h1>
             <div id="sketch-holder"></div>
         </div>
     </header>
     <div class="container main-content">
-        <section class="row flex-row clear ">
+        <section class="row flex-row clear">
             <div class="flex-column flex-element-5">
                 <div class="column-4 panel-title ">
                     <div class="content ">
